grammar.js
    source_file: ($) => repeat($._structure_item),

    _structure_item: ($) =>
      choice(
        prec(PREC.TOP_LEVEL_EXPRESSION, $.expression),
        prec(PREC.MODULE_DECLARATION, $._module)
      ),

    ////////////////////////////////////////////////////////////////////////////
    //
    // Modules
    //
    ////////////////////////////////////////////////////////////////////////////

    expr_op: ($) => choice($._expr_operator_unary, $._expr_operator_binary),

    _expr_operator_unary: ($) =>
      prec.right(
        PREC.UNARY_OP,
        seq(field("operator", alias(oneOf(OP1), $.unary_op)), field("operand", $.expression))
      ),

    _expr_operator_binary: ($) =>
      choice(
        prec.left(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", alias(oneOf(OP2_LEFT_ASSOC), $.binary_op)),
            field("rhs", $.expression)
          )
        ),
        prec.right(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", alias(oneOf(OP2_RIGHT_ASSOC), $.binary_op)),
            field("rhs", $.expression)
          )
        )
      ),

    variable: ($) =>
      /[_A-Z\xC0-\xD6\xD8-\xDE][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,

    atom: ($) => field("value", choice($._unquoted_atom, $._quoted_atom)),
    _unquoted_atom: ($) =>
      /[a-z\xDF-\xF6\xF8-\xFF][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,
    _quoted_atom: ($) => seq("'", repeat(choice(/[^'\\]+/, $._escape)), "'"),

    integer: ($) =>
      choice(
        // binary syntax
        /-?2#[01_]+/,
        // hex syntax
        /-?16#[a-fA-F0-9_]+/,
        // regular "other base" syntax
        /-?([\d*_]*#)?[\d_]+/
      ),
